# audioforge

./: .gitignore  README.md  interview.md  pyproject.toml  technical.md
audioforge/: __init__.py  config.py
audioforge/anomaly/: embeddings.py  ensemble.py  knn.py  mahalanobis.py  memory_bank.py
audioforge/data/: dcase.py  fsd50k.py  manifests.py
audioforge/evaluation/: benchmark_table.py  dcase_metrics.py  fsd50k_metrics.py
audioforge/features/: augment.py  logmel.py  waveform.py
audioforge/inference/: predict_anomaly.py  predict_event.py
audioforge/models/: __init__.py  ast.py  scratch_cnn.py
audioforge/serving/: api.py  gradio_app.py
audioforge/training/: distributed.py  losses.py  train_dcase.py  train_fsd50k.py  trainer.py
audioforge/utils/: __init__.py  checkpoint.py  device.py  logging.py  seed.py
configs/dcase/: baseline_mahala.yaml  beats_knn.yaml  beats_memory_bank.yaml  ensemble.yaml
configs/fsd50k/: ast_2gpu.yaml  random_subset.yaml  scratch_cnn.yaml  smoke.yaml  smoke_ast.yaml
data/manifests/dcase2024/: all.csv
data/manifests/fsd50k/: README.manifest.md  label_map.json  summary.json  test.csv  train.csv  val.csv
data/manifests/fsd50k/random_subset/: train.csv  val.csv
reports/: ast_report.md  fsd50k_scratch_cnn_row.md  scratch_cnn_report.md
reports/metrics/: scratch_cnn_benchmark_row.json
scripts/: download_fsd50k.sh  export_hf.py  make_fsd50k_benchmark_row.py  make_scratch_benchmark_row.py  plot_training_report.py  prepare_dcase.py  prepare_fsd50k.py  random_train.sh  run_dcase_benchmark.sh  smoke_train.sh  smoke_train_ast.sh  train_2gpu.sh  train_ast_2gpu.sh  train_scratch_cnn.sh
