[project]
name = "audioforge"
version = "0.1.0"
description = "Benchmark-grade audio ML system for FSD50K multi-label audio event classification."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Aurorium" }
]

dependencies = [
  "accelerate>=0.34.0",
  "datasets>=2.21.0",
  "evaluate>=0.4.2",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "gradio>=4.44.0",
  "huggingface-hub>=0.24.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "peft>=0.13.0",
  "prometheus-client>=0.20.0",
  "pyyaml>=6.0.2",
  "rich>=13.8.0",
  "scikit-learn>=1.5.0",
  "soundfile>=0.12.1",
  "torch>=2.4.0",
  "torchaudio>=2.4.0",
  "tqdm>=4.66.0",
  "transformers>=4.44.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

tracking = [
  "wandb>=0.17.0",
  "mlflow>=2.15.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audioforge"]

[tool.hatch.build.targets.editable]
packages = ["audioforge"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
